--- a/hotspot/Makefile
+++ b/hotspot/Makefile
@@ -1,9 +1,9 @@
 #
-# Thanks to Greg Link from Penn State University 
+# Thanks to Greg Link from Penn State University
 # for his math acceleration engine.
 #
 
-# Uncomment the following math acceleration flags 
+# Uncomment the following math acceleration flags
 # relevant to your target and set the appropriate
 # path and flag options
 
@@ -13,24 +13,23 @@ SUPERLU = 0
 endif
 
 ifeq ($(SUPERLU), 1)
-#Super LU
-SuperLUroot	= /net/if10/rz3vg/Runjie/Temp/SuperLU_4.3
-SUPERLULIB 	= $(SuperLUroot)/lib/libsuperlu_4.3.a
-BLASLIB    	= -L $(SuperLUroot) -lblas
-SLU_HEADER  = $(SuperLUroot)/SRC
+#SuperLUroot	= /usr/lib/x86_64-linux-gnu
+BLASLIB    	= -lblas
+SUPERLULIB 	= -lsuperlu
+SLU_HEADER  = /usr/include/superlu/
 
 MATHACCEL	= none
 INCDIR		= $(SLU_HEADER)
-LIBDIR		= 
-LIBS  		= -lm $(SUPERLULIB) $(BLASLIB)
-EXTRAFLAGS	= 
+LIBDIR		=
+LIBS  		= -lm $(BLASLIB) $(SUPERLULIB)
+EXTRAFLAGS	=
 else
 # default - no math acceleration
 MATHACCEL	= none
-INCDIR		= 
-LIBDIR		= 
+INCDIR		=
+LIBDIR		=
 LIBS		= -lm
-EXTRAFLAGS	= 
+EXTRAFLAGS	=
 endif
 
 # Intel Machines - acceleration with the Intel
@@ -39,7 +38,7 @@ endif
 #INCDIR		= /bigdisk/ks4kk/mkl/10.1.0.015/include
 #LIBDIR		= /bigdisk/ks4kk/mkl/10.1.0.015/lib/em64t
 #LIBS		= -lmkl_lapack -lmkl -lguide -lm -lpthread
-#EXTRAFLAGS	= 
+#EXTRAFLAGS	=
 
 # AMD Machines - acceleration with the AMD
 # Core Math Library (ACML)
@@ -47,23 +46,23 @@ endif
 #INCDIR		= /uf1/ks4kk/lib/acml3.6.0/gfortran32/include
 #LIBDIR		= /uf1/ks4kk/lib/acml3.6.0/gfortran32/lib
 #LIBS		= -lacml -lgfortran -lm
-#EXTRAFLAGS	= 
+#EXTRAFLAGS	=
 
 # Apple Machines - acceleration with the Apple
 # Velocity Engine (AltiVec)
 #MATHACCEL	= apple
-#INCDIR		= 
-#LIBDIR		= 
+#INCDIR		=
+#LIBDIR		=
 #LIBS		= -framework vecLib -lm
-#EXTRAFLAGS	= 
+#EXTRAFLAGS	=
 
 # Sun Machines - acceleration with the SUN
 # performance library (sunperf)
 #MATHACCEL	= sun
-#INCDIR		= 
-#LIBDIR		= 
+#INCDIR		=
+#LIBDIR		=
 #LIBS		= -library=sunperf
-#EXTRAFLAGS	= -dalign 
+#EXTRAFLAGS	= -dalign
 
 # basic compiler flags - special case for sun
 ifeq ($(MATHACCEL), sun)
@@ -77,7 +76,7 @@ else
 OFLAGS		= -xO4 -erroff=badargtypel2w
 endif	# DEBUG = 2
 endif	# DEBUG = 1
-else	# MATHACCEL != sun	
+else	# MATHACCEL != sun
 CC 			= gcc
 ifeq ($(DEBUG), 1)
 OFLAGS		= -O0 -ggdb -Wall
@@ -97,11 +96,6 @@ LEXT		= a
 # Verbosity level [0-3]
 ifndef VERBOSE
 VERBOSE	= 1
-endif
-
-#BU_3D: Debugging 3D [0-1]
-ifndef DEBUG3D
-DEBUG3D = 0
 endif
 
 # Numerical ID for each acceleration engine
@@ -129,13 +123,25 @@ ifdef LIBDIR
 LIBDIRFLAG = -L$(LIBDIR)
 endif
 
-CFLAGS	= $(OFLAGS) $(EXTRAFLAGS) $(INCDIRFLAG) $(LIBDIRFLAG) -DVERBOSE=$(VERBOSE) -DMATHACCEL=$(ACCELNUM) -DDEBUG3D=$(DEBUG3D) -DSUPERLU=$(SUPERLU) -g
+CFLAGS	= $(OFLAGS) $(EXTRAFLAGS) $(INCDIRFLAG) $(LIBDIRFLAG) -DVERBOSE=$(VERBOSE) -DMATHACCEL=$(ACCELNUM) -DSUPERLU=$(SUPERLU)
 
 # sources, objects, headers and inputs
 
+# Microchannel Files
+UCHANSRC = microchannel.c
+UCHANOBJ = microchannel.$(OEXT)
+UCHANHDR = microchannel.h
+UCHANIN = example.microchannel_config
+
+# Materials Files
+MSRC = materials.c
+MOBJ = materials.$(OEXT)
+MHDR = materials.h
+MIN = test.materials
+
 # HotFloorplan
-FLPSRC	= flp.c flp_desc.c npe.c shape.c 
-FLPOBJ	= flp.$(OEXT) flp_desc.$(OEXT) npe.$(OEXT) shape.$(OEXT) 
+FLPSRC	= flp.c flp_desc.c npe.c shape.c
+FLPOBJ	= flp.$(OEXT) flp_desc.$(OEXT) npe.$(OEXT) shape.$(OEXT)
 FLPHDR	= flp.h npe.h shape.h
 FLPIN = ev6.desc avg.p
 
@@ -143,7 +149,7 @@ FLPIN = ev6.desc avg.p
 TEMPSRC	= temperature.c RCutil.c
 TEMPOBJ	= temperature.$(OEXT) RCutil.$(OEXT)
 TEMPHDR = temperature.h
-TEMPIN	= 
+TEMPIN	=
 
 #	Package model
 PACKSRC	=	package.c
@@ -152,8 +158,8 @@ PACKHDR	=	package.h
 PACKIN	=	package.config
 
 # HotSpot block model
-BLKSRC = temperature_block.c 
-BLKOBJ = temperature_block.$(OEXT) 
+BLKSRC = temperature_block.c
+BLKOBJ = temperature_block.$(OEXT)
 BLKHDR	= temperature_block.h
 BLKIN	= ev6.flp gcc.ptrace
 
@@ -170,13 +176,14 @@ MISCHDR = util.h wire.h
 MISCIN	= hotspot.config
 
 # all objects
-OBJ	= $(TEMPOBJ) $(PACKOBJ) $(BLKOBJ) $(GRIDOBJ) $(FLPOBJ) $(MISCOBJ)
+OBJ	= $(UCHANOBJ) $(MOBJ) $(TEMPOBJ) $(PACKOBJ) $(BLKOBJ) $(GRIDOBJ) $(FLPOBJ) $(MISCOBJ)
 
 # targets
 all:	hotspot hotfloorplan lib
 
 hotspot:	hotspot.$(OEXT) $(OBJ)
 	$(CC) $(CFLAGS) -o hotspot hotspot.$(OEXT) $(OBJ) $(LIBS)
+
 ifdef LIBDIR
 		@echo
 		@echo
@@ -219,4 +226,3 @@ clean:
 
 cleano:
 	$(RM) *.$(OEXT) *.obj
-
