--- a/hotspot/examples/example2/example.config
+++ b/hotspot/examples/example2/example.config
@@ -1,82 +1,69 @@
-# This is an example hotspot configuration file.
-# It demonstrates the importance of secondary heat transfer path 
-# in a special cooling scenario -- oil flowing over bare # silicon 
-# during infrared thermal measurements.
-# Convergence is in this oil config slower than typical heatsink configs. 
-#
-# More details about this configuration can be found in the following papers:
-# 1. F. J. Mesa-Martinez, J. Nayfach-Battilana, and J. Renau. 
-# "Power model validation through thermal measurements". 
-# In Proc. of International Symposium on Computer Architecture 
-# (ISCA), 2007.
-# 2. W. Huang, K. Skadron, S. Gurumurthi, R. Ribando and M. Stan. 
-# "Differetiating the Roles of IR Measurement and Simulation for 
-# Power and Temperature-Aware Design”, International Symposium on 
-# Performance Analysis of Systems and Software (ISPASS), 2009.
-
 # thermal model parameters
 
 	# chip specs
-		# chip thickness in meters
-		-t_chip				0.0005
-		# silicon thermal conductivity in W/(m-K)
-		-k_chip				100.0
-		# silicon specific heat in J/(m^3-K)
-		-p_chip				1.75e6
-		# temperature threshold for DTM (kelvin)
-		-thermal_threshold	354.95
+		# chip thickness in meters (only used if LCF is not specified)
+		-t_chip				0.00015
+    # chip default material
+    -material_chip silicon
+		# chip default thermal conductivity in W/(m-K) (overrided by default material)
+		# -k_chip				130.0
+		# chip volumetric heat capacity in J/(m^3-K) (overrided by default material)
+		# -p_chip				1630300
 
 	# heat sink specs
+    # heat sink material
+    -material_sink aluminum
 		# convection capacitance in J/K
-		-c_convec			0.077 
+		-c_convec			140.4
 		# convection resistance in K/W
-		-r_convec			1.042
+		-r_convec			0.1
 		# heatsink side in meters
-		-s_sink				0.0202 # virtually no heatsink
+		-s_sink				0.06
 		# heatsink thickness  in meters
-		-t_sink				0.00001
-		# heatsink thermal conductivity in W/(m-K)
-		-k_sink				400.0
-		# heatsink specific heat in J/(m^3-K)
-		-p_sink				3.55e6
+		-t_sink				0.0069
+		# heatsink thermal conductivity in W/(m-K) (overrided by heat sink material)
+		#-k_sink				400.0
+		# heatsink volumetric heat capacity in J/(m^3-K) (overrided by heat sink material)
+		#-p_sink				3.55e6
 
 	# heat spreader specs
+    # spreader material
+    -material_spreader aluminum
 		# spreader side in meters
-		-s_spreader			0.0201 # virtually no heat spreader
+		-s_spreader			0.03
 		# spreader thickness in meters
-		-t_spreader			0.00001
-		# heat spreader thermal conductivity in W/(m-K)
-		-k_spreader				400.0
-		# heat spreader specific heat in J/(m^3-K)
-		-p_spreader				3.55e6
+		-t_spreader			0.001
+		# heat spreader thermal conductivity in W/(m-K) (overrided by spreader material)
+		#-k_spreader				400.0
+		# heat spreader volumetric heat capacity in J/(m^3-K) (overrided by spreader material)
+		# -p_spreader				3.55e6
 
 	# interface material specs
 		# interface material thickness in meters
-		# this is actually the oil thermal boundary layer thickness
-		-t_interface		1.0e-06 
-		# oil thermal conductivity in W/(m-K)
-		-k_interface				4.0
-		# oil specific heat in J/(m^3-K)
-		-p_interface				4.0e6
-		
+		-t_interface		2.0e-05
+		# interface material thermal conductivity in W/(m-K) (overrided by interface material)
+		 -k_interface				4.0
+		# interface material volumetric heat capacity in J/(m^3-K) (overrided by interface material)
+		 -p_interface				4.0e6
+
 	# secondary path (C4/underfill, package substrate, solder balls etc)
-	# only available in the grid model
+	# ONLY AVAILABLE IN THE GRID MODEL WITHOUT MICROFLUIDIC COOLING
 		# model secondary path or not?
-		-model_secondary	1
+		-model_secondary	0
 		# convection resistance at the air/PCB interface in K/W
-		-r_convec_sec	0.2
-		# convection capacitance at the sir/PCB interface in J/K
+		-r_convec_sec	50.0
+		# convection capacitance at the air/PCB interface in J/K
 		-c_convec_sec	40.0
 		#	number of on-chip metal layers
 		-n_metal	8
 		#	one metal layer thickness in meters
-		-t_metal	100.0e-6 
+		-t_metal	100.0e-6
 		#	C4/underfill thickness in meters
 		-t_c4	0.0001
 		#	side size of EACH C4 pad
 		-s_c4	20.0e-6
 		# number of C4 pads
-		-n_c4	400 
+		-n_c4	400
 		# package substrate side in meters
 		-s_sub	0.021
 		# package substrate thickness in meters
@@ -88,7 +75,7 @@
 		# PCB side in meters
 		-s_pcb	0.1
 		# PCB thickness in meters
-		-t_pcb	0.002	
+		-t_pcb	0.002
 
 	# others
 		# ambient temperature in kelvin
@@ -96,26 +83,26 @@
 		# initial temperatures from file
 		-init_file			(null)
 		# initial temperature (kelvin) if not from file
-		-init_temp			273.15
+		-init_temp			318.15
 		# steady state temperatures to file
 		-steady_file		(null)
-		# hotspot calling interval - 10K cycles at 3GHz
-		-sampling_intvl		3e-3
+		# interval between power traces in seconds
+		-sampling_intvl		0.01
 		# base processor frequency in Hz
 		-base_proc_freq		3e+09
 		# is DTM employed?
 		-dtm_used			0
 		# model type - block or grid
-		-model_type			grid
-		
+		-model_type			block
+
 		# consider temperature-leakage loop within HotSpot?
 		-leakage_used 0
-		
+
 		# leakage calculation modes: (only valid when -leakage_used=1)
 		# 0 user-defined leakage power model, do temp-leakage loop within HotSpot
 		#	1 use HotLeakage -- !NOT implemented in this release!, coming later.
 		-leakage_mode	0
-		
+
 		# use detailed package model?
 		-package_model_used			0
 		-package_config_file			package.config
@@ -126,18 +113,55 @@
 
 	# grid model specific parameters
 		# grid resolution - no. of rows
-		-grid_rows			32
+		-grid_rows			64
 		# grid resolution - no. of cols
-		-grid_cols			32
+		-grid_cols			64
 		# layer configuration from file
 		-grid_layer_file	(null)
 		# dump internal grid steady state temperatures
 		-grid_steady_file	(null)
 		# grid to block mapping mode - (avg|min|max|center)
-		# i.e., a block's temperature is the avg, min or max 
+		# i.e., a block's temperature is the avg, min or max
 		# of all the grid cells in it or equal to that of
 		# the grid cell in its center
-		-grid_map_mode		center
+		-grid_map_mode		avg
+
+    # microfluidic cooling parameters
+      # using microfluidic cooling?
+      -use_microfluidic_cooling 0
+
+      # pumping pressure (Pa)
+      -pumping_pressure       52000
+
+      # Pump Internal Resistance (Pa-S/m^3)
+      -pump_internal_res 0
+
+      # temperature of coolant at inlet (K)
+      -inlet_temperature     298.15
+
+      # coolant material
+      -coolant_material water
+
+      # volumetric heat capacity of coolant (J/m^3-K) (overrided by coolant material)
+      # -coolant_capac  4172638
+
+      # resistivity of coolant (m-K/W) (overrided by coolant material)
+      # -coolant_res   1.647717911
+
+      # dynamic viscosity of coolant (Pa-s) (overrided by coolant material)
+      # -coolant_visc  8.89e-4
+
+      # channel wall material
+      -wall_material silicon
+
+      # volumetric heat capacity of channel walls (J/m^3-K) (overrided by wall material)
+      # -wall_capac   1630300
+
+      # resistivity of channel walls (m-K/W) (overrided by wall material)
+      # -wall_res     0.0076923077
+
+      # heat transfer coefficient (W/m^2-K)
+       -htc   27132
 
 # floorplanner parameters
 
@@ -146,19 +170,19 @@
 		-wrap_l2			1
 		# name of the L2 unit to look for
 		-l2_label			L2
-	
+
 	# rim modeling
 		# model dead space around the rim of the chip?
 		-model_rim			0
 		# thickness of the rim in meters
 		-rim_thickness		5e-05
-	
+
 	# others
 		# area ratio below which to ignore dead space
 		-compact_ratio		0.005
 		# no. of discrete orientations for a shape curve (even no. > 1)
 		-n_orients			300
-	
+
 	# annealing parameters
 		# initial acceptance probability
 		-P0					0.99
