enable SuperLU for HotSpot
SuperLU is an alternative numerical solver for HotSpot. This solver is
faster and configuring HotSpot with this solver is recommended by the
HotSpot documentation. Furthermore, the SuperLU solver is required for
backwards euler integration (which is one of the upgrades from HotSpot
v7.0).

--- a/docker/Dockerfile-ubuntu-18.04
+++ b/docker/Dockerfile-ubuntu-18.04
@@ -22,6 +22,10 @@ RUN apt-get update && apt-get install -y \
     libbz2-dev \
     g++-4.8 \
  && rm -rf /var/lib/apt/lists/*
+# For building HotSpot
+RUN apt-get update && apt-get install -y \
+    libsuperlu-dev \
+ && rm -rf /var/lib/apt/lists/*
 # For building RISC-V Tools
 RUN apt-get update && apt-get install -y \
     autoconf \
