--- a/docker/Dockerfile-ubuntu-16.04
+++ b/docker/Dockerfile-ubuntu-16.04
@@ -23,6 +23,10 @@ RUN apt-get update && apt-get install -y \
     g++-4.8 \
     g++-4.9 \
  && rm -rf /var/lib/apt/lists/*
+# For building HotSpot
+RUN apt-get update && apt-get install -y \
+    libsuperlu-dev \
+ && rm -rf /var/lib/apt/lists/*
 # For building RISC-V Tools
 RUN apt-get update && apt-get install -y \
     nano \
